feat: translations for PeriodType labels [DHIS2-21710]