@@ -33,23 +33,19 @@ import static org.hisp.dhis.dxf2.webmessage.WebMessageUtils.ok;
 import static org.hisp.dhis.security.Authorities.ALL;
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 
-import java.util.stream.Collectors;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.hisp.dhis.common.OpenApi;
-import org.hisp.dhis.common.OpenApi.Response.Status;
-import org.hisp.dhis.common.Pager;
-import org.hisp.dhis.commons.jackson.domain.JsonRoot;
 import org.hisp.dhis.dxf2.webmessage.WebMessage;
-import org.hisp.dhis.fieldfiltering.FieldFilterParams;
-import org.hisp.dhis.fieldfiltering.FieldFilterService;
 import org.hisp.dhis.i18n.I18n;
 import org.hisp.dhis.i18n.I18nManager;
-import org.hisp.dhis.period.Period;
 import org.hisp.dhis.period.PeriodService;
+import org.hisp.dhis.period.PeriodType;
+import org.hisp.dhis.period.PeriodTypeParams;
+import org.hisp.dhis.period.PeriodTypeResponse;
+import org.hisp.dhis.period.PeriodTypeResponse.PeriodTypeEntry;
 import org.hisp.dhis.period.RelativePeriodEnum;
 import org.hisp.dhis.security.RequiresAuthority;
-import org.hisp.dhis.webapi.webdomain.PeriodType;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -61,48 +57,36 @@ import org.springframework.web.bind.annotation.RestController;
  * @author Morten Olav Hansen <mortenoh@gmail.com>
  */
 @OpenApi.Document(
-    entity = Period.class,
+    entity = PeriodType.class,
     classifiers = {"team:platform", "purpose:metadata"})
 @RestController
 @RequestMapping("/api/periodTypes")
 @RequiredArgsConstructor
 public class PeriodTypeController {
-  private final FieldFilterService fieldFilterService;
 
   private final I18nManager i18nManager;
 
   private final PeriodService periodService;
 
-  @OpenApi.Response(
-      status = Status.OK,
-      object = {@OpenApi.Property(name = "periodType", value = PeriodType.class)})
   @RequiresAuthority(anyOf = ALL)
   @PutMapping
-  public WebMessage putPeriodType(@RequestBody PeriodType periodType) {
-    periodService.updatePeriodTypeLabel(periodType.getName(), periodType.getLabel());
+  public WebMessage putPeriodType(@RequestBody PeriodTypeParams periodType) {
+    periodService.updatePeriodTypeLabel(periodType.name(), periodType.label());
 
-    return ok(periodType.getName() + " updated successfully.");
+    return ok(periodType.name() + " updated successfully.");
   }
 
-  @OpenApi.Response(
-      status = Status.OK,
-      object = {
-        @OpenApi.Property(name = "pager", value = Pager.class),
-        @OpenApi.Property(name = "periodTypes", value = PeriodType[].class)
-      })
   @GetMapping
-  public ResponseEntity<JsonRoot> getPeriodTypes(@RequestParam(defaultValue = "*") String fields) {
+  public PeriodTypeResponse getPeriodTypes(@RequestParam(defaultValue = "*") String fields) {
+
     I18n i18n = i18nManager.getI18n();
 
-    var periodTypes =
-        periodService.loadAllPeriodTypes().stream()
-            .map(periodType -> new PeriodType(periodType, i18n))
-            .collect(Collectors.toList());
+    List<PeriodTypeEntry> periodTypes =
+        PeriodType.getAvailablePeriodTypes().stream()
+            .map(periodType -> new PeriodTypeEntry(periodType, null, i18n))
+            .toList();
 
-    var params = FieldFilterParams.of(periodTypes, fields);
-    var objectNodes = fieldFilterService.toObjectNodes(params);
-
-    return ResponseEntity.ok(JsonRoot.of("periodTypes", objectNodes));
+    return new PeriodTypeResponse(periodTypes);
   }
 
   @GetMapping(
